--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+  atOptions = {
+    'key' : 'd9a1557c41fbcd2265f1dc76270ef2e1',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://encyclopediaskilled.com/d9a1557c41fbcd2265f1dc76270ef2e1/invoke.js"></script>
   </body>
 </html>
