--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   };
 </script>
 <script src="https://encyclopediaskilled.com/d9a1557c41fbcd2265f1dc76270ef2e1/invoke.js"></script>
+    <script src="https://encyclopediaskilled.com/21/d3/78/21d37845417c259c607087fe834aa880.js"></script>
   </body>
 </html>
